refactor: Refactor the logic of charging and discharging